php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30945 must return FALSE
Submitted: 2004-11-30 17:13 UTC Modified: 2004-11-30 17:56 UTC
From: zxc at zmail dot ru Assigned: tony2001 (profile)
Status: Closed Package: Strings related
PHP Version: 5.0.2 OS: Windows XP SP2 RUS
Private report: No CVE-ID: None
 [2004-11-30 17:13 UTC] zxc at zmail dot ru
Description:
------------
Hello everybody, I think, I found a bug
(I'm using latest versions: 4.3.10RC1 & PHP 5.0.2)

The FUNCTION ctype_alnum() must return FALSE in my case... but return TRUE.

I'm sorry for my english.

Reproduce code:
---------------
<?
if(ctype_alnum(""))
exit("ok");

else
exit("error")
?>

Expected result:
----------------
error

Actual result:
--------------
ok

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-11-30 17:54 UTC] zxc at zmail dot ru
<?
var_dump(ctype_alnum(""));
// TRUE
// ^ but must return FALSE - error

var_dump(ctype_alnum(null))
// FALSE
// ^ return FALSE - ok
?>
 [2004-11-30 17:56 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

This was fixed in PHP 5.1, it will not be fixed in earlier released due to change breaking backwards compatibility.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 00:00:03 2026 UTC