Fixed bug #30945 (make ctype_* functions return FALSE on empty strings). Slight performance improvement of multi-byte string checking via ctype_*.